# heiwa

./: .build.yml  .env  .gitignore  .gitlab-ci.yml  .woodpecker.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  heiwa.kdl  heiwa.service  package-lock.json  package.json  tailwind.config.js  zellij.kdl
.github/workflows/: rust.yml
migrations/00000000000001_heiwa_initial_setup/: down.sql  up.sql
perso/: config.toml
src/: cli.rs  configuration.rs  entities.rs  handlers.rs  init.rs  main.rs  schema.rs  services.rs  templates.rs  utils.rs
src/cli/: commands.rs  init.rs  page.rs  serve.rs
src/entities/: articles.rs  articles_entity.rs  articles_tags.rs  articles_tags_entity.rs  authors.rs  authors_entity.rs  links.rs  links_entity.rs  page.rs  pagination.rs  roles.rs  roles_entity.rs  tags.rs  tags_entity.rs  token_payload.rs
src/handlers/: account.rs  api.rs  articles.rs  articles_api_handler.rs  authors.rs  backoffice.rs  dashboard.rs  error.rs  error_handler.rs  errors.rs  front.rs  frontend.rs  home.rs  links.rs  links_api_handler.rs  page.rs  rss.rs  search.rs  sitemap.rs  tag.rs  tags.rs
src/handlers/api/: articles.rs  articles_api_handler.rs  authors.rs  authors_api_handler.rs  errors.rs  links.rs  tags.rs  tags_api_handler.rs  tokens_handler.rs
src/handlers/backoffice/: articles.rs  dashboard.rs
src/handlers/dashboard/: articles_handler.rs  dashboard_handler.rs  profile_handler.rs
src/handlers/front/: account_handler.rs  article_handler.rs  home_handler.rs
src/handlers/frontend/: account_handler.rs  home_handler.rs
src/handlers/public/: account_handler.rs  error_handler.rs  home_handler.rs
src/middlewares/: auth.rs  authentication.rs  authentication_middleware.rs
src/services/: articles.rs  articles_service.rs  author.rs  authors.rs  authors_service.rs  config.rs  database.rs  database_service.rs  errors.rs  errors_service.rs  http_client.rs  jwt.rs  jwt_service.rs  links.rs  session.rs  sessions.rs
src/templates/: dashboard_templates.rs  site_templates.rs
src/utils/: file.rs  handler.rs  markdown.rs  template.rs
templates/: layout-dashboard.html  layout.html
templates/pages/: article.html  error-page.html  home.html  login.html  register.html
templates/pages/account/: dashboard.html
templates/pages/backoffice/: articles-list.html  articles-new.html  articles_new.html
templates/pages/dashboard/: articles-edit.html  articles-list.html  articles-new.html  dashboard.html  profile.html
templates/statics/: styles.css
templates/tags/: article-list.html  dashboard-article-list.html  dashboard-menu.html  footer.html  nav.html
