[package]
name = "heiwa"
license = "GPL-3.0-or-later"
repository = "https://git.sr.ht/~hidrile/heiwa-authors"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.7"
clap = { version = "4.3.21", features = ["derive"] }
hyper = "0.14.27"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.6"
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
mime = "0.3.17"
