[package]
name = "heiwa"
description = "A minimalist flat file CMS"
license = "GPL-3.0-or-later"
repository = "https://codeberg.org/haruka/heiwa"
version = "0.1.14-dev"
edition = "2021"

[dependencies]
axum = { version = "0.6.7", features = ["headers", "http2"] }
clap = { version = "4.3.21", features = ["derive"] }
chrono = "0.4.26"
glob = "0.3.1"
gray_matter = "0.2.6"
hyper = "0.14.27"
mime_guess = "2.0.4"
pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
rss = "2.0.6"
serde = { version = "1.0.152", features = ["derive"] }
tera = "1.19.0"
toml = "0.7.6"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = "0.7.8"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
words-count = "0.1.5"
zip = "0.6.6"
zip-extensions = "0.6.1"

[dev-dependencies]
pretty_assertions = "1.3.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.8.0"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Where to host releases
hosting = ["axodotdev", "github"]
